--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sample.SampleActivity"></activity>
-        <activity android:name=".baseobservable.AutoSampleActivity"></activity>
+        <activity android:name=".sample.SampleActivity" />
+        <activity android:name=".baseobservable.SampleActivity1" />
+        <activity android:name=".observablecollection.SampleActivity2" />
+        <activity android:name=".observablefield.SampleActivity3" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
